--- a/ExtraWage.css
+++ b/ExtraWage.css
@@ -1,4 +1,7 @@
-body{background-color: rgb(150, 148, 148);
+body{
+    background-color: rgb(150, 148, 148);
+    width: 960px;
+    margin: auto;
 }
 
 form dl dt{
